--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
-
-<html>
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8">
+    <title>Ejemplo 2.2</title>
+  </head>
 <body>
-<p> Este es un p&aacute;rrafo muy peque&ntilde;o con un enlace al
-<a href="http://www.ipn.mx">IPN</a>
+  <h1>Ejemplo2.2</h1>
+<p> 
+Este es un párrafo muy pequeño.
 </p>
+<canvas>
+  ¡No funciona!
+</canvas>
 </body>
 </hmtl>
