--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="utf-8">
-    <title>Ejemplo 2.2</title>
+    <title>Barrueta</title>
   </head>
 <body>
-  <h1>Ejemplo2.2</h1>
-<p> 
-Este es un párrafo muy pequeño.
-</p>
+  <h1>Vanessa Barrueta Munguia</h1>
+  <a href="./rv/index.html">Curso Realidad Virtual</a>
 <canvas>
   ¡No funciona!
 </canvas>
