--- a/rv/index.html
+++ b/rv/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <h1>Aquí van las tareas de realidad virtual</h1>
+<h2>Integrantes: </h2>
+<p> Vanessa Barrueta Munguia</p>
+<p><a href="http://francisgoba.github.io" >Francisco González Bautista</a>
+ </p>
 <canvas>
 ¡No funciona!
 </canvas>
