--- a/rv/viernes190216.html
+++ b/rv/viernes190216.html
@@ -20,8 +20,8 @@ var far=1000;
 var camara=new THREE.PerspectiveCamera(fov,aspect,near,far);
 camara.position.z=5;
 var renderer=new THREE.WebGLRenderer();
-renderer.SetSize(window.innerWidth,window.innerHeight);
-document.element.appendChild(renderer.domElement);
+renderer.Setsize(window.innerWidth,window.innerHeight);
+document.body.appendChild(renderer.domElement);
 var forma=new THREE.BoxGeometry(1,1,1);
 var material=new THREE.MeshBasicMaterial({color:0x00ff00});
 var cubo=new THREE.Mesh(forma,material);
