--- a/rv/viernes190216.html
+++ b/rv/viernes190216.html
@@ -1,20 +1,20 @@
 <!doctype html>
 <html>
-<head>
-<title>Viernes 190216</title>
-<meta http-equiv="Content-Type"
-  content="text/html; charset=UTF-8">
-<style>
-body {margin: 0;}
-canvas{width:100%;height 100%;}
-</style>
-</head>
-<body>
-<script src="three.min.js"></script>
-<script>
-var escena=new THREE.Scene();
-var fov=75;
-var aspect=window.innerWidth/window.innerHeigth;
+  <head>
+    <title>Viernes 190216</title>
+    <meta http-equiv="Content-Type"
+    content="text/html; charset=UTF-8">
+    <style>
+      body {margin: 0;}
+      canvas{width:100%;height 100%;}
+    </style>
+  </head>
+  <body>
+    <script src="three.min.js"></script>
+    <script>
+      var escena=new THREE.Scene();
+      var fov=75;
+var aspect=window.innerWidth/window.innerHeight;
 var near=0.1;
 var far=1000;
 var camara=new THREE.PerspectiveCamera(fov,aspect,near,far);
