--- a/rv/viernes190216.html
+++ b/rv/viernes190216.html
@@ -22,6 +22,8 @@ camara.position.z=5;
 var renderer=new THREE.WebGLRenderer();
 renderer.setSize(window.innerWidth,window.innerHeight);
 document.body.appendChild(renderer.domElement);
+</script>
+<script>
 var forma=new THREE.BoxGeometry(1,1,1);
 var material=new THREE.MeshBasicMaterial({color:0x00ff00});
 var cubo=new THREE.Mesh(forma,material);
