Update and rename Cilindro2402_2.html to Cilindro2402.html

--- a/rv/Cilindro2402.html
+++ b/rv/Cilindro2402.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Esfera2402</title>
+    <title>Cilindro2402_2</title>
     <meta http-equiv="Content-Type"
     content="text/html; charset=UTF-8">
     <style>
