--- a/rv/Torus2402.html
+++ b/rv/Torus2402.html
@@ -24,8 +24,8 @@ renderer.setSize(window.innerWidth,window.innerHeight);
 document.body.appendChild(renderer.domElement);
 var forma=new THREE.TorusGeometry(5,6);
 var material=new THREE.MeshDepthMaterial({color:0x00ff00});
-var Toroide=new THREE.Mesh(forma,material);
-escena.add(Toroide);
+var torus=new THREE.Mesh(forma,material);
+escena.add(torus);
 function render()
 {
   requestAnimationFrame(render);
