--- a/rv/Torus2402.html
+++ b/rv/Torus2402.html
@@ -22,10 +22,10 @@ camara.position.z=5;
 var renderer=new THREE.WebGLRenderer();
 renderer.setSize(window.innerWidth,window.innerHeight);
 document.body.appendChild(renderer.domElement);
-var forma=new THREE.TorusGeometry(5,6);
-var material=new THREE.MeshDepthMaterial({color:0x00ff00});
-var torus=new THREE.Mesh(forma,material);
-escena.add(torus);
+var geometry = new THREE.TorusGeometry( 10, 3, 16, 100 );
+var material = new THREE.MeshBasicMaterial( { color: 0xffff00 } );
+var torus = new THREE.Mesh( geometry, material );
+scene.add( torus );
 function render()
 {
   requestAnimationFrame(render);
