--- a/rv/torus2402.html
+++ b/rv/torus2402.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Torus2402_3</title>
+    <title>torus2402_3</title>
     <meta http-equiv="Content-Type"
     content="text/html; charset=UTF-8">
     <style>
