--- a/rv/torus2402.html
+++ b/rv/torus2402.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>torus2402_3</title>
+    <title>torus2402-3</title>
     <meta http-equiv="Content-Type"
     content="text/html; charset=UTF-8">
     <style>
@@ -25,7 +25,7 @@ document.body.appendChild(renderer.domElement);
 </script>
 <script>
 var geometry = new THREE.TorusGeometry( 10, 3, 16, 100 );
-var material = new THREE.MeshBasicMaterial( { color: 0xffff00 } );
+var material = new THREE.MeshNormalMaterial();
 var torus = new THREE.Mesh( geometry, material );
 scene.add( torus );
 function render()
