--- a/rv/Estrella2402.html
+++ b/rv/Estrella2402.html
@@ -25,7 +25,7 @@ document.body.appendChild(renderer.domElement);
 </script>
 <script>
 
-var geometry = new THREE.Shape();
+var figura = new THREE.Shape();
 //la figura se realiza sobre el plano xy
 figura.moveTo(10,10);
 figura.lineTo(10,40);
