--- a/rv/Estrella2402.html
+++ b/rv/Estrella2402.html
@@ -37,6 +37,7 @@
       figura.lineTo(100,130);
       figura.lineTo(50,90);
       figura.lineTo(110,190);
+      figura.lineTo(130,20);
       
       
       var forma = new THREE.ShapeGeometry(figura);
