--- a/rv/Estrella2402.html
+++ b/rv/Estrella2402.html
@@ -26,7 +26,7 @@
     <script>
       var figura = new THREE.Shape();
       
-      //figura.moveTo(130,20);
+      figura.moveTo(130,20);
       figura.lineTo(130,20);
       figura.lineTo(150,90);
       figura.lineTo(210,90);
