--- a/rv/index.html
+++ b/rv/index.html
@@ -10,6 +10,17 @@
 <p> Vanessa Barrueta Munguia</p>
 <p><a href="http://francisgoba.github.io" >Francisco González Bautista</a>
  </p>
+ <h2>Programas:</h2>
+  <OL>
+    <LI> <a href="./viernes190216.html">Cubo</a>
+    <LI> <a href="./esfera.html">Esfera</a>
+    <LI> <a href="./Cilindro2402.html">Cilindro</a>
+    <LI> <a href="./torus2402.html">Toroide</a>
+    <LI> <a href="./Estrella2402.html">Estrella</a>
+    <LI> <a href="./H2602.html">H</a>
+    <LI> <a href="./Revolucion2602.html">Revolución</a>
+  </OL>
+
 <canvas>
 ¡No funciona!
 </canvas>
