--- a/rv/index.html
+++ b/rv/index.html
@@ -19,6 +19,7 @@
     <LI> <a href="./Estrella2402.html">Estrella</a>
     <LI> <a href="./H2602.html">H</a>
     <LI> <a href="./Revolucion2602.html">Revolución</a>
+    <LI> <a href="http://francisgoba.github.io/rv/robot020316.html">Robot</a>
   </OL>
 
 <canvas>
