--- a/rv/herencia0403.html
+++ b/rv/herencia0403.html
@@ -10,7 +10,7 @@ body{text-align:center;}
 <body>
 <script src="http//mrdoob.github.comm/three.js/build/three.min.js">
 </script>
-<scrip src="./ejemplo.1.js">
+<script src="./ejemplo.1.js">
 </script>
 </body>
 </html>
