--- a/rv/material0903.html
+++ b/rv/material0903.html
@@ -8,7 +8,7 @@ body {text-align:center;}
 <body>
 <script src="http://mrdoob.github.com/three.js/build/three.min.js">
 </script>
-<script src=ejemploo.1.js">
+<script src="ejemploo.1.js">
 </script>
 </body>
 </html>
