--- a/rv/index.html
+++ b/rv/index.html
@@ -20,6 +20,10 @@
     <LI> <a href="./H2602.html">H</a>
     <LI> <a href="./Revolucion2602.html">Revolución</a>
     <LI> <a href="http://francisgoba.github.io/rv/robot020316.html">Robot</a>
+    <LI> <a href="http://francisgoba.github.io/rv/RobotObjetos.html">Robot con Objetos</a>
+    <LI> <a href="http://francisgoba.github.io/rv/RobotObjetosPhong.html">Robot con Phong material</a>
+    <LI> <a href="http://francisgoba.github.io/rv/RobotObjetosLambert.html">Robot con Lambert material</a>
+    <LI> <a href="http://francisgoba.github.io/rv/herencia040316.html">Robot con un objeto</a>
   </OL>
 
 <canvas>
