--- a/rv/index.html
+++ b/rv/index.html
@@ -24,6 +24,8 @@
     <LI> <a href="http://francisgoba.github.io/rv/RobotObjetosPhong.html">Robot con Phong material</a>
     <LI> <a href="http://francisgoba.github.io/rv/RobotObjetosLambert.html">Robot con Lambert material</a>
     <LI> <a href="http://francisgoba.github.io/rv/herencia040316.html">Robot con un objeto</a>
+    <LI> <a href="http://francisgoba.github.io/rv/RobotTexturas.html">Robot con texturas</a>
+    <LI> <a href="http://francisgoba.github.io/rv/RobotColisiones.html">Robot con colisiones</a>
   </OL>
 
 <canvas>
