--- a/rv/index.html
+++ b/rv/index.html
@@ -26,6 +26,8 @@
     <LI> <a href="http://francisgoba.github.io/rv/herencia040316.html">Robot con un objeto</a>
     <LI> <a href="http://francisgoba.github.io/rv/RobotTexturas.html">Robot con texturas</a>
     <LI> <a href="http://francisgoba.github.io/rv/RobotColisiones.html">Robot con colisiones</a>
+    <LI> <a href="http://francisgoba.github.io/rv/RobotAgentes.html">Robot con agentes</a>
+    <LI> <a href="http://francisgoba.github.io/rv/RobotLuces.html">Robot con luces</a>
   </OL>
 
 <canvas>
