--- a/rv/index.html
+++ b/rv/index.html
@@ -28,6 +28,7 @@
     <LI> <a href="http://francisgoba.github.io/rv/RobotColisiones.html">Robot con colisiones</a>
     <LI> <a href="http://francisgoba.github.io/rv/RobotAgentes.html">Robot con agentes</a>
     <LI> <a href="http://francisgoba.github.io/rv/RobotLuces.html">Robot con luces</a>
+    <LI> <a href="./CilindroParedes.html">Cilindro con Paredes</a>
   </OL>
 
 <canvas>
