--- a/rv/CilindroParedes.html
+++ b/rv/CilindroParedes.html
@@ -3,7 +3,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Herencia en JavaScript 0403</title>
+<title>Experimento Cilindro con paredes</title>
 <meta http-equiv="Content-Type"content="text/html;charset=UTF-8">
 <style>
 body{text-align:center;}
