--- a/rv/Robotevento.html
+++ b/rv/Robotevento.html
@@ -10,7 +10,7 @@
   <body>
     <script src="http://mrdoob.github.com/three.js/build/three.min.js">
     </script>
-    <script src="./robotevento.js"></script>
+    <script src="./agenterobot.js"></script>
     <script src="./robotconevento.js"></script>
   </body>
 </html>
