--- a/rv/Robotevento.html
+++ b/rv/Robotevento.html
@@ -11,6 +11,6 @@
     <script src="http://mrdoob.github.com/three.js/build/three.min.js">
     </script>
     <script src="./agenterobot.js"></script>
-    <script src="./robotconevento.js"></script>
+    <script src="./robotconeventos.js"></script>
   </body>
 </html>
