--- a/rv/index.html
+++ b/rv/index.html
@@ -30,6 +30,7 @@
     <LI> <a href="http://francisgoba.github.io/rv/RobotLuces.html">Robot con luces</a>
     <LI> <a href="http://francisgoba.github.io/rv/RobotParedes.html">Robot con cambio de paredes</a>
     <LI> <a href="./CilindroParedes.html">Cilindro con Paredes</a>
+     <LI> <a href=http://francisgoba.github.io/rv/Robotcambiocamara.html>Proyecto final</a>
   </OL>
 
 <canvas>
